{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 202,
  "lineage": "c8d63a90-637c-d330-18f1-9a0b5db8cd7f",
  "resources": [
    {
      "module": "module.dmfl-security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:880680561036:security-group/sg-09dad35157727230d",
            "description": "Security Group managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09dad35157727230d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dmfl-sg-20231231044815549700000001",
            "name_prefix": "dmfl-sg-",
            "owner_id": "880680561036",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dmfl-sg"
            },
            "tags_all": {
              "Name": "dmfl-sg"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-037860ed8dd3d1a23"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmfl_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dmfl-security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-3984833983",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09dad35157727230d",
            "security_group_rule_id": "sgr-05d922fc92ff2733c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmfl-security-group.aws_security_group.this",
            "module.dmfl-security-group.aws_security_group.this_name_prefix",
            "module.dmfl_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmfl_vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:880680561036:network-acl/acl-007fe9a3933149bea",
            "default_network_acl_id": "acl-007fe9a3933149bea",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-007fe9a3933149bea",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "880680561036",
            "subnet_ids": [
              "subnet-0806bec261db32c88",
              "subnet-08d3ab5a718d86f08",
              "subnet-08f92931a6b118c2d",
              "subnet-0b8b44d06a2341cf9"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dmfl-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dmfl-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-037860ed8dd3d1a23"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmfl_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmfl_vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:880680561036:route-table/rtb-034c4b5669ab72d32",
            "default_route_table_id": "rtb-034c4b5669ab72d32",
            "id": "rtb-034c4b5669ab72d32",
            "owner_id": "880680561036",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "dmfl-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dmfl-vpc-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-037860ed8dd3d1a23"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmfl_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmfl_vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:880680561036:security-group/sg-03d76f772bad2317a",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-03d76f772bad2317a",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "880680561036",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dmfl-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dmfl-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-037860ed8dd3d1a23"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmfl_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmfl_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:880680561036:internet-gateway/igw-04d2483f907a6f378",
            "id": "igw-04d2483f907a6f378",
            "owner_id": "880680561036",
            "tags": {
              "Environment": "dev",
              "Name": "dmfl-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dmfl-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-037860ed8dd3d1a23"
          },
          "dependencies": [
            "module.dmfl_vpc.aws_vpc.this",
            "module.dmfl_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmfl_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04d2483f907a6f378",
            "id": "r-rtb-03d30fd1c027536c41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03d30fd1c027536c4",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmfl_vpc.aws_internet_gateway.this",
            "module.dmfl_vpc.aws_route_table.public",
            "module.dmfl_vpc.aws_vpc.this",
            "module.dmfl_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmfl_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:880680561036:route-table/rtb-0b3970576d79d921b",
            "id": "rtb-0b3970576d79d921b",
            "owner_id": "880680561036",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "dmfl-vpc-private-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dmfl-vpc-private-us-east-1c",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-037860ed8dd3d1a23"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmfl_vpc.aws_vpc.this",
            "module.dmfl_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:880680561036:route-table/rtb-03d5462605c10483d",
            "id": "rtb-03d5462605c10483d",
            "owner_id": "880680561036",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "dmfl-vpc-private-us-east-1d",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dmfl-vpc-private-us-east-1d",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-037860ed8dd3d1a23"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmfl_vpc.aws_vpc.this",
            "module.dmfl_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmfl_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:880680561036:route-table/rtb-03d30fd1c027536c4",
            "id": "rtb-03d30fd1c027536c4",
            "owner_id": "880680561036",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04d2483f907a6f378",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dmfl-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dmfl-vpc-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-037860ed8dd3d1a23"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmfl_vpc.aws_vpc.this",
            "module.dmfl_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmfl_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec13118f4351783e",
            "route_table_id": "rtb-0b3970576d79d921b",
            "subnet_id": "subnet-0806bec261db32c88"
          },
          "dependencies": [
            "module.dmfl_vpc.aws_route_table.private",
            "module.dmfl_vpc.aws_subnet.private",
            "module.dmfl_vpc.aws_vpc.this",
            "module.dmfl_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038c5e4d4ed25b6c0",
            "route_table_id": "rtb-03d5462605c10483d",
            "subnet_id": "subnet-0b8b44d06a2341cf9"
          },
          "dependencies": [
            "module.dmfl_vpc.aws_route_table.private",
            "module.dmfl_vpc.aws_subnet.private",
            "module.dmfl_vpc.aws_vpc.this",
            "module.dmfl_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmfl_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096b2a5932a13921a",
            "route_table_id": "rtb-03d30fd1c027536c4",
            "subnet_id": "subnet-08d3ab5a718d86f08"
          },
          "dependencies": [
            "module.dmfl_vpc.aws_route_table.public",
            "module.dmfl_vpc.aws_subnet.public",
            "module.dmfl_vpc.aws_vpc.this",
            "module.dmfl_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8251f80c3c07a75",
            "route_table_id": "rtb-03d30fd1c027536c4",
            "subnet_id": "subnet-08f92931a6b118c2d"
          },
          "dependencies": [
            "module.dmfl_vpc.aws_route_table.public",
            "module.dmfl_vpc.aws_subnet.public",
            "module.dmfl_vpc.aws_vpc.this",
            "module.dmfl_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmfl_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:880680561036:subnet/subnet-0806bec261db32c88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.92.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0806bec261db32c88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "880680561036",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dmfl-vpc-private-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dmfl-vpc-private-us-east-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-037860ed8dd3d1a23"
          },
          "dependencies": [
            "module.dmfl_vpc.aws_vpc.this",
            "module.dmfl_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:880680561036:subnet/subnet-0b8b44d06a2341cf9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.92.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8b44d06a2341cf9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "880680561036",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dmfl-vpc-private-us-east-1d",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dmfl-vpc-private-us-east-1d",
              "Terraform": "true"
            },
            "vpc_id": "vpc-037860ed8dd3d1a23"
          },
          "dependencies": [
            "module.dmfl_vpc.aws_vpc.this",
            "module.dmfl_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmfl_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:880680561036:subnet/subnet-08d3ab5a718d86f08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.92.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d3ab5a718d86f08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "880680561036",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dmfl-vpc-public-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dmfl-vpc-public-us-east-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-037860ed8dd3d1a23"
          },
          "dependencies": [
            "module.dmfl_vpc.aws_vpc.this",
            "module.dmfl_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:880680561036:subnet/subnet-08f92931a6b118c2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.92.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f92931a6b118c2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "880680561036",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dmfl-vpc-public-us-east-1d",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dmfl-vpc-public-us-east-1d",
              "Terraform": "true"
            },
            "vpc_id": "vpc-037860ed8dd3d1a23"
          },
          "dependencies": [
            "module.dmfl_vpc.aws_vpc.this",
            "module.dmfl_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmfl_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:880680561036:vpc/vpc-037860ed8dd3d1a23",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.92.0.0/16",
            "default_network_acl_id": "acl-007fe9a3933149bea",
            "default_route_table_id": "rtb-034c4b5669ab72d32",
            "default_security_group_id": "sg-03d76f772bad2317a",
            "dhcp_options_id": "dopt-0907fc0cc563801a2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-037860ed8dd3d1a23",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-034c4b5669ab72d32",
            "owner_id": "880680561036",
            "tags": {
              "Environment": "dev",
              "Name": "dmfl-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dmfl-vpc",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2-instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0591e1c6a24d08458",
            "arn": "arn:aws:ec2:us-east-1:880680561036:instance/i-09f658ef2b3a32abf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvde",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:880680561036:key/62381a01-4bf6-4044-89ad-c53153884ea5",
                "throughput": 125,
                "volume_id": "vol-000ea64fbc87bce12",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09f658ef2b3a32abf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dmfl-cloud-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0deaa809f70fabee3",
            "private_dns": "ip-10-92-101-199.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.92.101.199",
            "public_dns": "ec2-54-234-35-95.compute-1.amazonaws.com",
            "public_ip": "54.234.35.95",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:880680561036:key/62381a01-4bf6-4044-89ad-c53153884ea5",
                "throughput": 125,
                "volume_id": "vol-0b621f5b1b4cb3cca",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0806bec261db32c88",
            "tags": {
              "Environment": "dev",
              "Name": "dmfl-backend-server",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dmfl-backend-server",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "dmfl-backend-server"
            },
            "vpc_security_group_ids": [
              "sg-09dad35157727230d"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "data.aws_ami.amazon-linux-2",
            "module.dmfl-security-group.aws_security_group.this",
            "module.dmfl-security-group.aws_security_group.this_name_prefix",
            "module.dmfl_vpc.aws_subnet.private",
            "module.dmfl_vpc.aws_vpc.this",
            "module.dmfl_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.ec2-instance.aws_iam_instance_profile.this",
            "module.ec2-instance.aws_iam_role.this",
            "module.ec2-instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2-instance.data.aws_partition.current",
            "module.ec2-instance.data.aws_ssm_parameter.this",
            "tls_private_key.key_pair"
          ]
        }
      ]
    }
  ]
}